Fix web.xml, rename SettingDAO.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,6 +7,8 @@
     <servlet-mapping>
         <servlet-name>HomeServlet</servlet-name>
         <url-pattern>/home</url-pattern>
+    </servlet-mapping>
+    <servlet>
         <servlet-name>SettingServlet</servlet-name>
         <servlet-class>controller.SettingServlet</servlet-class>
     </servlet>
