--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,8 @@ file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\ACER\\Downloads\\li
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 4 - SP24\\PRJ301\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 4 - SP24\\PRJ301\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail-api-1.6.2.jar=C:\\Users\\ACER\\Downloads\\javax.mail-api-1.6.2.jar
+file.reference.javax.mail.jar=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\javax.mail.jar
 file.reference.jaxb-api-2.1.jar=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\jaxb-api-2.1.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.15.jar=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\mysql-connector-java-8.0.15.jar
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
-    ${file.reference.jaxb-api-2.1.jar}
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.mail-api-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
