--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-2=C:\\Users\\Owner\\Downlo
 file.reference.javax.mail.jar=C:\\Users\\Owner\\Downloads\\javax.mail.jar
 file.reference.jaxb-api-2.1.jar=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\jaxb-api-2.1.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Owner\\Downloads\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-j-8.4.0.jar-1=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,12 +48,13 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-2}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
