--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,7 +26,9 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 4 - SP24\\PRJ301\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 4 - SP24\\PRJ301\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jaxb-api-2.1.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
@@ -40,11 +42,13 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.4.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
