--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,12 +5,12 @@
         <servlet-class>controller.HomeServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>PostListServlet</servlet-name>
-        <servlet-class>controller.PostListServlet</servlet-class>
+        <servlet-name>BlogListServlet</servlet-name>
+        <servlet-class>controller.BlogListServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>PostDetailServlet</servlet-name>
-        <servlet-class>controller.PostDetailServlet</servlet-class>
+        <servlet-name>BlogDetailServlet</servlet-name>
+        <servlet-class>controller.BlogDetailServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ProductDetailServlet</servlet-name>
@@ -53,12 +53,12 @@
         <url-pattern>/setting</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>PostListServlet</servlet-name>
-        <url-pattern>/postlist</url-pattern>
+        <servlet-name>BlogListServlet</servlet-name>
+        <url-pattern>/bloglist</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>PostDetailServlet</servlet-name>
-        <url-pattern>/postdetail</url-pattern>
+        <servlet-name>BlogDetailServlet</servlet-name>
+        <url-pattern>/blogdetail</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>ProductDetailServlet</servlet-name>
@@ -89,5 +89,3 @@
         <url-pattern>/adduser</url-pattern>
     </servlet-mapping>
 </web-app>
-
-
