--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -56,7 +56,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jakarta.activation-1.2.1.jar}
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
