--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -52,6 +52,10 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>controller.LoginServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EmailVerifyServlet</servlet-name>
+        <servlet-class>controller.EmailVerifyServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>HomeServlet</servlet-name>
         <url-pattern>/home</url-pattern>
@@ -103,5 +107,9 @@
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EmailVerifyServlet</servlet-name>
+        <url-pattern>/emailverify</url-pattern>
     </servlet-mapping>
 </web-app>
