--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,7 @@ file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Sem
 file.reference.mysql-connector-java-8.0.15.jar=..\\..\\mysql-connector-java-8.0.15.jar
 file.reference.mysql-connector-java-8.0.15.jar-1=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\mysql-connector-java-8.0.15.jar
 
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 
@@ -58,7 +58,11 @@ javac.classpath=\
     ${file.reference.jakarta.activation-1.2.1.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-2}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar-1}
+    ${file.reference.mysql-connector-java-8.0.15.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.mysql-connector-java-8.0.15.jar}
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
