--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,18 +28,16 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 
-file.reference.jakarta.activation-1.2.1.jar=C:\\Users\\ACER\\Downloads\\jakarta.activation-1.2.1.jar
+file.reference.jakarta.activation-1.2.1.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\jakarta.activation-1.2.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 4 - SP24\\PRJ301\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 4 - SP24\\PRJ301\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-2=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\javax.mail.jar
+file.reference.javax.mail.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\javax.mail.jar
 file.reference.jaxb-api-2.1.jar=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jaxb-api-2.1.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.15.jar=..\\..\\mysql-connector-java-8.0.15.jar
-file.reference.mysql-connector-java-8.0.15.jar-1=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\mysql-connector-java-8.0.15.jar
 
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
@@ -54,15 +52,17 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.jakarta.activation-1.2.1.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-2}:\
     ${file.reference.mysql-connector-java-8.0.15.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}
+    ${file.reference.mysql-connector-java-8.0.15.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2}:\
+    ${file.reference.jakarta.activation-1.2.1.jar}:\
+    ${file.reference.javax.mail.jar}
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
