Thêm màn hình MyOrders

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -72,6 +72,10 @@
         <servlet-name>AdminDashBoardServet</servlet-name>
         <servlet-class>controller.AdminDashBoardServet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MyOrdersServlet</servlet-name>
+        <servlet-class>controller.MyOrdersServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>HomeServlet</servlet-name>
         <url-pattern>/home</url-pattern>
@@ -143,5 +147,9 @@
     <servlet-mapping>
         <servlet-name>AdminDashBoardServet</servlet-name>
         <url-pattern>/admindashboard</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MyOrdersServlet</servlet-name>
+        <url-pattern>/myorders</url-pattern>
     </servlet-mapping>
 </web-app>
