--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -128,6 +128,14 @@
         <servlet-name>DeleteAddressServlet</servlet-name>
         <servlet-class>controller.DeleteAddressServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AddFeedbackServlet</servlet-name>
+        <servlet-class>controller.AddFeedbackServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>FeedbackServlet</servlet-name>
+        <servlet-class>controller.FeedbackServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>HomeServlet</servlet-name>
         <url-pattern>/home</url-pattern>
@@ -255,5 +263,13 @@
     <servlet-mapping>
         <servlet-name>DeleteAddressServlet</servlet-name>
         <url-pattern>/deleteaddress</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddFeedbackServlet</servlet-name>
+        <url-pattern>/addfeedback</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FeedbackServlet</servlet-name>
+        <url-pattern>/feedback</url-pattern>
     </servlet-mapping>
 </web-app>
