--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,14 +5,6 @@
         <servlet-class>controller.HomeServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>BlogListServlet</servlet-name>
-        <servlet-class>controller.BlogListServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>BlogDetailServlet</servlet-name>
-        <servlet-class>controller.BlogDetailServlet</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>ProductDetailServlet</servlet-name>
         <servlet-class>controller.ProductDetailServlet</servlet-class>
     </servlet>
@@ -59,14 +51,6 @@
     <servlet>
         <servlet-name>SortBlogServlet</servlet-name>
         <servlet-class>controller.SortBlogServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>BlogListServlet</servlet-name>
-        <servlet-class>controller.BlogListServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>BlogDetailServlet</servlet-name>
-        <servlet-class>controller.BlogDetailServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>RegisterServlet</servlet-name>
@@ -128,6 +112,18 @@
         <servlet-name>AddCartPageServlet</servlet-name>
         <servlet-class>controller.AddCartPageServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SaleDashboardServlet</servlet-name>
+        <servlet-class>controller.SaleDashboardServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>BlogListServlet</servlet-name>
+        <servlet-class>controller.BlogListServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>BlogDetailServlet</servlet-name>
+        <servlet-class>controller.BlogDetailServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>HomeServlet</servlet-name>
         <url-pattern>/home</url-pattern>
@@ -135,14 +131,6 @@
     <servlet-mapping>
         <servlet-name>SettingServlet</servlet-name>
         <url-pattern>/setting</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>BlogListServlet</servlet-name>
-        <url-pattern>/bloglist</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>BlogDetailServlet</servlet-name>
-        <url-pattern>/blogdetail</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>ProductDetailServlet</servlet-name>
@@ -187,14 +175,6 @@
     <servlet-mapping>
         <servlet-name>SortBlogServlet</servlet-name>
         <url-pattern>/sortblog</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>BlogListServlet</servlet-name>
-        <url-pattern>/bloglist</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>BlogDetailServlet</servlet-name>
-        <url-pattern>/blogdetail</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
@@ -255,5 +235,17 @@
     <servlet-mapping>
         <servlet-name>AddCartPageServlet</servlet-name>
         <url-pattern>/addcartpage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SaleDashboardServlet</servlet-name>
+        <url-pattern>/SaleDashboard</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BlogListServlet</servlet-name>
+        <url-pattern>/bloglist</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BlogDetailServlet</servlet-name>
+        <url-pattern>/blogdetail</url-pattern>
     </servlet-mapping>
 </web-app>
