--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -123,8 +123,8 @@
     <servlet>
         <servlet-name>BlogDetailServlet</servlet-name>
         <servlet-class>controller.BlogDetailServlet</servlet-class>
-        </servlet>
-        <servlet>
+    </servlet>
+    <servlet>
         <servlet-name>CartContactServlet</servlet-name>
         <servlet-class>controller.CartContactServlet</servlet-class>
     </servlet>
@@ -163,6 +163,10 @@
     <servlet>
         <servlet-name>AddCartHomepageServlet</servlet-name>
         <servlet-class>controller.AddCartHomepageServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AddCartProductListServlet</servlet-name>
+        <servlet-class>controller.AddCartProductListServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>HomeServlet</servlet-name>
@@ -287,7 +291,7 @@
     <servlet-mapping>
         <servlet-name>BlogDetailServlet</servlet-name>
         <url-pattern>/blogdetail</url-pattern>
-        </servlet-mapping>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>CartContactServlet</servlet-name>
         <url-pattern>/cartcontact</url-pattern>
@@ -327,5 +331,9 @@
     <servlet-mapping>
         <servlet-name>AddCartHomepageServlet</servlet-name>
         <url-pattern>/addcarthomepage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddCartProductListServlet</servlet-name>
+        <url-pattern>/addcartproductlist</url-pattern>
     </servlet-mapping>
 </web-app>
