--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 
+file.reference.activation-1.1.jar=F:\\Freelancer\\LIB\\activation-1.1.jar\\activation-1.1.jar
 file.reference.jakarta.activation-1.2.1.jar-1=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\jakarta.activation-1.2.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 4 - SP24\\PRJ301\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 4 - SP24\\PRJ301\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail.jar-1=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\javax.mail.jar
@@ -53,11 +53,10 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.jakarta.activation-1.2.1.jar-1}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-2}:\
     ${file.reference.javax.mail.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}
+    ${file.reference.mysql-connector-java-8.0.15.jar}:\
+    ${file.reference.activation-1.1.jar}
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
@@ -98,7 +97,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=default_platform
+platform.active=JDK_17
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
