--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 
+file.reference.jakarta.activation-1.2.1.jar=C:\\Users\\Admin\\Documents\\SWP_Project\\jakarta.activation-1.2.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 4 - SP24\\PRJ301\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=C:\\Users\\Admin\\Documents\\SWP_Project\\javax.mail.jar
+file.reference.jaxb-api-2.1.jar=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jaxb-api-2.1.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\jakarta.servlet.jsp.jstl-2.0.0.jar
@@ -39,6 +42,8 @@ file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\duongvu\\Deskto
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\duongvu\\Desktop\\FPT\\Semester 5 - SU24\\SWP391\\Project\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 
 file.reference.mysql-connector-java-8.0.15.jar=C:\\Users\\ACER\\Downloads\\lib (1)\\lib\\mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-8.0.15.jar-1=C:\\Users\\Admin\\Documents\\SWP_Project\\mysql-connector-java-8.0.15.jar
+file.reference.sqljdbc42.jar=C:\\Users\\Admin\\Documents\\PRJ301\\GivenProjectExample\\SamplePe3\\allowedlib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +52,14 @@ j2ee.platform=10-web
 j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.7-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jakarta.activation-1.2.1.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mysql-connector-java-8.0.15.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.sqljdbc42.jar}
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
